# mos6502-emulation

./: CMakeLists.txt  README.md
6502/Emulator/: CMakeLists.txt
6502/Emulator/src/: main.cc  mos6502.cc  mos6502.h
6502/Test/: CMakeLists.txt  CMakeLists.txt.in
6502/Test/src/: AddWithCarryTest.cc  AndEorOraTest.cc  BranchTest.cc  CompareRegisterTest.cc  IncrementDecrementTest.cc  JumpsAndCallsTest.cc  LoadPrgTest.cc  LoadRegisterTest.cc  ShiftTest.cc  StackOperationsTest.cc  StatusFlagChangeTest.cc  StoreRegisterTest.cc  SystemFunctionsTest.cc  TransferRegisterTest.cc  main.cc
